# xy2.dev-backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20211002153311_comments.up.sql  20211103085006_create_reaction.down.sql  20211103085006_create_reaction.up.sql
migrations/2021-10-02-153311_comments/: up.sql
src/: comment.rs  db.rs  main.rs  resources.rs
src/resources/: comment.rs  reaction.rs
src/src/: schema.rs
