[package]
name = "xy2_dev_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main deps
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
serde = { version = "^1", features = ["rc"] }

# Minor deps
actix-cors = "0.5.4"
dotenv = "0.15.0"
anyhow = "^1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }
serde_json = "^1"