[package]
name = "xy2_dev_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main deps
actix-web = "^4.0.0-beta" # web server
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "^1", features = ["rc"] } # serialization to json

# Minor deps
actix-http = "^3.0.0-beta" # http for actix
actix-cors = "^0.6.0-beta" # CORS (for dev)
actix-ratelimit = "0.3.1" # rate limiting
anyhow = "^1" # simpler error type
chrono = { version = "0.4", features = ["serde"] } # for DateTime type
dotenv = "0.15.0" # load secrets
env_logger = "0.9.0" # log
log = "0.4.14" # logger facade
serde_json = "^1" # serde: handling json
validator = { version = "0.12", features = ["derive"] } # validate requests