[package]
name = "xy2_dev_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main deps
actix-web = "4" # web server
# pinned to beta.5 because of actix error bug, see https://github.com/actix/actix-web/issues/2173
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] } # sql queries
serde = { version = "^1", features = ["rc"] } # serialization to json

# Minor deps
actix-http = "3"
actix-web-httpauth = "0.8"
actix-cors = "0.6" # CORS (for dev)
actix-ratelimit = "0.3.1" # rate limiting
anyhow = "^1" # simpler error type
chrono = { version = "0.4", features = ["serde"] } # for DateTime type
dotenv = "0.15.0" # load secrets
env_logger = "0.9.0" # log
log = "0.4.14" # logger facade
serde_json = "^1" # serde: handling json
validator = { version = "0.12", features = ["derive"] } # validate requests
